[package]
name = "who-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.4"
parking_lot = "0.12"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
ws = "0.9.2"
